<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/clMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tbWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="6dp">

            <TextView
                android:id="@+id/tvHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heading_stat"
                android:textColor="@color/toll_bar_heading"
                android:textSize="18sp" />
        </android.support.v7.widget.Toolbar>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="@string/region_label"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="@string/max_temp_label"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="@string/min_temp_label"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="@string/mean_temp_label"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="@string/sunshine_label"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="@string/rainfall_label"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvRegion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
            </LinearLayout>

        </HorizontalScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>